# raymond

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  main.cc
src/material/: color.cc  color.h  ray.cc  ray.h  sphere.cc  sphere.h
src/math/: ops.h  vector.cc  vector.h
